# mozembed_js

./: AUTHORS  ChangeLog  Makefile.am  README  configure.in
src/: Makefile.am  mozemb_js.cpp
tests/: browser.js  introspectable.js  test.js  test_dbus.js
