dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(mozembed_js, 0.1.1)

dnl create a config.h file (Automake will add -DHAVE_CONFIG_H)
AM_CONFIG_HEADER(config.h)

AC_SUBST(VERSION)

ISODATE=`date +%Y-%m-%d`
AC_SUBST(ISODATE)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_CXX

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h sys/param.h sys/time.h time.h sys/mkdev.h sys/sysmacros.h string.h memory.h fcntl.h dirent.h sys/ndir.h ndir.h alloca.h locale.h )

dnl Checks for libraries.
#PKG_CHECK_MODULES(JS, js >= 1.6.0 )
#AC_SUBST(JS_CFLAGS)
#AC_SUBST(JS_LIBS)

AC_CHECK_PROG(HAVE_SYSJS, sysjs, yes, no)
if test $HAVE_SGML2LATEX = "yes" ; then
  echo "print(this);" | sysjs
  if [ $? == 0 ] ; then
	echo "found sysjs"
  else
    PSER="sgml2latex -p"
  fi
fi


PKG_CHECK_MODULES(DBUS, dbus-1 >= 0.93)
AC_SUBST(DBUS_FLAGS)
AC_SUBST(DBUS_LIBS)

PKG_CHECK_MODULES(GLIB, glib-2.0 >= 0.93)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 2.16)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

PKG_CHECK_MODULES(XULU, libxul-embedding-unstable >= 1.9)
AC_SUBST(XULU_FLAGS)
AC_SUBST(XULU_LIBS)

PKG_CHECK_MODULES(MOZEMB,mozilla-gtkmozembed  >= 1.9.1)
AC_SUBST(MOZEMB_CFLAGS)
AC_SUBST(MOZEMB_LIBS)

dnl #PKG_CHECK_MODULES(MOZEMB,libxul-embedding  >= 1.9.1)
dnl #AC_SUBST(MOZEMB_CFLAGS)
dnl #AC_SUBST(MOZEMB_LIBS)



jm_CHECK_TYPE_STRUCT_UTIMBUF
AC_HEADER_MAJOR
AC_FUNC_ALLOCA
AC_STRUCT_TM
AC_STRUCT_ST_BLOCKS
AC_FUNC_CLOSEDIR_VOID
AC_CHECK_FUNCS(mkfifo)
AC_CHECK_FUNC(mknod)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.

LT_INIT
AC_CONFIG_MACRO_DIR([m4])

AC_OUTPUT(Makefile src/Makefile)


